--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "expo": "^49.0.23",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^17.0.8",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.19.6"
